--- a/_posts/2017-03-12-Archeage.md
+++ b/_posts/2017-03-12-Archeage.md
@@ -11,7 +11,7 @@ image:
 ---
 ### 해당 게임 사에서 운영 중인 위키에 작성해 놓은 내용입니다.
 ### 혹시 몰라 블로그로 옮겨 놓았습니다.
-- [4차 CBT 소나기원정대](http://archeage.xlgames.com/wikis/%EC%86%8C%EB%82%98%EA%B8%B0%EC%9B%90%EC%A0%95%EB%8C%80대
+- [4차 CBT 소나기원정대](http://archeage.xlgames.com/wikis/%EC%86%8C%EB%82%98%EA%B8%B0%EC%9B%90%EC%A0%95%EB%8C%80)
 - [5차 CBT 원양어선](http://archeage.xlgames.com/wikis/%EC%9B%90%EC%96%91%EC%96%B4%EC%84%A0)
 - [정식서비스 고요한아침의나라](http://archeage.xlgames.com/wikis/%EA%B3%A0%EC%9A%94%ED%95%9C%EC%95%84%EC%B9%A8%EC%9D%98%EB%82%98%EB%9D%BC)
 
