brain_STL_functionPointer_02

--- a/_posts/cpp/2017-10-23-brain_STL_01.md
+++ b/_posts/cpp/2017-10-23-brain_STL_01.md
@@ -31,6 +31,7 @@ int main()
 
     return 0;
 }
+
 ```
 
 ### 함수포인터의 선언과 사용
@@ -57,6 +58,23 @@ int main()
     cout << endl;
     cout << Print << endl;
 
+    // 아래 두개의 값은 같게 출력이 된다.
+    cout << pf << endl;
+    cout << *pf << endl;
+
+
     return 0;
 }
 ```
+- 함수의 이름인 Print가 함수의 시작 주소이므로 pf도 함수의 시작 주소이다.
+- 함수 호출은 함수포인터를 이용해 pf() 처럼 호출한다.
+- 또한, 함수 포인터는 메모리 접근 연산자(*)를 붙여도 함수의 주소이다.
+    - 때문에 (*pf)() 와 같이도 호출이 가능하다.
+
+#### 정리
+- 함수의 시작 주소를 나타내는 Print, pf, *pf 는 모두 같다.
+- 함수의 호출은 Print(), pf(), (*pf)() 3가지 모두 가능하다. 
+
+<br/>
+
+## 함수 포인터의 종류
