--- a/_posts/2017-03-12-Archeage.md
+++ b/_posts/2017-03-12-Archeage.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Guild
+title: Archeage 원정대
 description: ""
 published: true
-modified: 2017-03-12
+modified: 2017-07-16
 tags: []
 image:
   feature: background/Computer/5.jpg
@@ -40,7 +40,7 @@ image:
 
 
 #### 5차 CBT 종료 후 페이스북에서 이런저런 이야기를 나누며 오픈베타를 기다렸고 원정대원을 모집했다.
-그 당시 원정대 모집 문구는  ![](http://archeage.xlgames.com/board/attachments/8a948b884a79c836014a91dbddbd011e)  ![](http://archeage.xlgames.com/board/attachments/8a948b884a79c836014a91e8d387011f)
+그 당시 원정대 모집 문구는  ![](http://archeage.xlgames.com/board/attachments/8a948b884a79c836014a91e8d387011f)
 
 오픈베타 전 흡연왕스모킹 님과 음주왕드링킹 님이 원정대 탈퇴.  
 오픈베타 직전 멜디 님이 원정대 문양을 제작해주셨습니다.
@@ -92,6 +92,8 @@ image:
 <iframe width="560" height="315" src="//www.youtube.com/embed/4QQv73yOnMQ" frameborder="0"></iframe>
 <iframe width="560" height="315" src="//www.youtube.com/embed/xvO1pc4RHJo" frameborder="0"></iframe>
 
+#### 이벤트 후기
+[후기 LINK](http://archeage.xlgames.com/community/openboards/167168)
 <br/>
 
 #### 2월 13일 리나인버스 님 블랙펄 제작
