--- a/_posts/Diary/2017-11-29-diary.md
+++ b/_posts/Diary/2017-11-29-diary.md
@@ -4,13 +4,13 @@ title: Bluehole 떨어졌다 하핫
 description: ""
 published: true
 modified: 2017-11-19
-tags: []
+tags: [Diary]
 image:
   feature: background/Computer/5.jpg
   credit: unsplash
 ---
 
-![](images/Diary/Bluehole.png)
+![]({{ site.url }}/images/Diary/Bluehole.png)
 
 <br/>
 
