--- a/_posts/Diary/2017-12-01-171201_diary.md
+++ b/_posts/Diary/2017-12-01-171201_diary.md
@@ -19,4 +19,7 @@ Codewars라는 곳을 이틀전에 알게 되었다.
 
 ---
 
-Link - [Codewars](https://www.codewars.com)
+## Link 
+- [Codewars](https://www.codewars.com)
+- [Codewars Profile](https://www.codewars.com/users/Yujin%20Jung)
+- [Github에 정리](https://github.com/YujinJung/Codewars)
