--- a/_posts/OpenGL/2017-04-02-EGL.md
+++ b/_posts/OpenGL/2017-04-02-EGL.md
@@ -3,7 +3,7 @@ layout: post
 title: EGL
 description:
 modified: 2017-04-02
-tags: [Computer Graphics, OpenGL]
+tags: [OpenGL]
 image:
   feature: background/Computer/7.jpg
   credit: unsplash
