--- a/_posts/OpenGL/2017-04-03-Shader.md
+++ b/_posts/OpenGL/2017-04-03-Shader.md
@@ -3,7 +3,7 @@ layout: post
 title: Shader
 description:
 modified: 2017-04-02
-tags: [Computer Graphics, OpenGL]
+tags: [OpenGL]
 image:
   feature: background/Computer/4.jpg
   credit: unsplash
