--- a/_posts/OpenGL/2017-06-30-Shading.md
+++ b/_posts/OpenGL/2017-06-30-Shading.md
@@ -3,7 +3,7 @@ layout: post
 title: Shading
 description:
 modified: 2017-06-30
-tags: [Computer Graphics, OpenGL]
+tags: [OpenGL]
 image:
   feature: background/Computer/7.jpg
   credit: unsplash
