--- a/_posts/OpenGL/2017-07-01-Texture.md
+++ b/_posts/OpenGL/2017-07-01-Texture.md
@@ -3,7 +3,7 @@ layout: post
 title: Texture
 description:
 modified: 2017-07-01
-tags: [Computer Graphics, OpenGL]
+tags: [OpenGL]
 image:
   feature: background/Computer/7.jpg
   credit: unsplash
