--- a/_posts/sample_post/2017-01-11-sample.md
+++ b/_posts/sample_post/2017-01-11-sample.md
@@ -2,6 +2,7 @@
 layout: post
 title: Sample
 description: "Just about everything you'll need to style in the theme: headings, paragraphs, blockquotes, tables, code blocks, and more."
+published: false
 modified: 2017-01-11
 tags: [sample post]
 image:
