--- a/_posts/Diary/2017-12-21-171221_diary.md
+++ b/_posts/Diary/2017-12-21-171221_diary.md
@@ -16,9 +16,9 @@ image:
 
 ![]({{ site.url }}/images/Diary/contribute_171221.png)
 얼마 전에 한거긴 한데..  
-최근에 내 Github 계정의 Contribution수가 비정상적으로 많다는 것을 알게 되었고  
-왜 인지 살펴보니까 rebase 했던 것들, 처음 Github 사용할 때 막 커밋 하면서 연습했던 것들이  
-쌓이고 쌓여서 1200 Contribution가 되어있었다..  
+최근에 내 Github 계정의 Contribution 수가 비정상적으로 많다는 것을 알게 되었고  
+왜 인지 살펴보니까 rebase 했던 것들(반영 안 되는 줄..), 처음 Github 사용할 때 막 커밋 하면서 연습했던 것들이  
+쌓이고 쌓여서 1200 contributions가 되어있었다;;  
 그래서 이제 안쓰는 저장소랑 rebase 해서 Contribution 수 잡아먹는 것들을 정리했다.  
 그러고 나니 위에 사진처럼 Contribution 수가 1200에서 300으로..  
   
