--- a/_posts/Diary/2017-11-29-171129_diary.md
+++ b/_posts/Diary/2017-11-29-171129_diary.md
@@ -4,6 +4,7 @@ title: Bluehole 떨어졌다 하핫
 description: ""
 published: true
 modified: 2017-11-29
+category: Diary
 tags: [Diary]
 image:
   feature: background/Computer/5.jpg
