--- a/_posts/Diary/2017-12-01-171201_diary.md
+++ b/_posts/Diary/2017-12-01-171201_diary.md
@@ -4,6 +4,7 @@ title: codewars
 description: ""
 published: true
 modified: 2017-12-01
+category: Diary
 tags: [Diary]
 image:
   feature: background/Computer/2.jpg
