--- a/_posts/Diary/2017-12-21-171221_diary.md
+++ b/_posts/Diary/2017-12-21-171221_diary.md
@@ -4,6 +4,7 @@ title: 드디어!!
 description: ""
 published: true
 modified: 2017-12-21
+category: Diary
 tags: [Diary]
 image:
   feature: background/Computer/9.jpg
