--- a/_posts/OpenGL/2017-04-02-EGL.md
+++ b/_posts/OpenGL/2017-04-02-EGL.md
@@ -3,7 +3,8 @@ layout: post
 title: EGL
 description:
 modified: 2017-04-02
-tags: [OpenGL]
+category: OpenGL
+tags: [OpenGL, EGL, double buffering]
 image:
   feature: background/Computer/7.jpg
   credit: unsplash
