--- a/_posts/OpenGL/2017-04-03-Shader.md
+++ b/_posts/OpenGL/2017-04-03-Shader.md
@@ -3,7 +3,8 @@ layout: post
 title: Shader
 description:
 modified: 2017-04-02
-tags: [OpenGL]
+category: OpenGL
+tags: [OpenGL, Shader, Vertex, Fragment]
 image:
   feature: background/Computer/4.jpg
   credit: unsplash
