--- a/_posts/OpenGL/2017-07-01-Texture.md
+++ b/_posts/OpenGL/2017-07-01-Texture.md
@@ -3,7 +3,8 @@ layout: post
 title: Texture
 description:
 modified: 2017-07-01
-tags: [OpenGL]
+category: OpenGL
+tags: [OpenGL, Texture]
 image:
   feature: background/Computer/7.jpg
   credit: unsplash
