--- a/_posts/Tips/2017-04-08-MS_Edge.md
+++ b/_posts/Tips/2017-04-08-MS_Edge.md
@@ -3,6 +3,7 @@ layout: post
 title: Edge 단축키
 description:
 modified: 2017-04-02
+category: Tips
 tags: [Tips]
 image:
   feature: background/Computer/marius-masalar-132751.jpg
