--- a/_posts/UnrealEngine/2017-07-04-Material.md
+++ b/_posts/UnrealEngine/2017-07-04-Material.md
@@ -3,7 +3,8 @@ layout: post
 title: Material (수정 중)
 description:
 modified: 2017-07-04
-tags: [Unreal Engine]
+category: Unreal Engine
+tags: [Unreal Engine, Material]
 image:
   feature: background/Computer/2.jpg
   credit: unsplash
