--- a/_posts/UnrealEngine/2017-08-13-TArray.md
+++ b/_posts/UnrealEngine/2017-08-13-TArray.md
@@ -4,7 +4,8 @@ title: TArray
 description:
 modified: 2017-08-10
 published: false
-tags: [Unreal Engine]
+category: Unreal Engine
+tags: [Unreal Engine, TArray]
 image:
   feature: background/Computer/3.jpg
   credit: unsplash
