--- a/_posts/compiler/2017-04-11-lex.md
+++ b/_posts/compiler/2017-04-11-lex.md
@@ -3,7 +3,8 @@ layout: post
 title: Lex
 description:
 modified: 2017-04-11
-tags: [Compiler]
+category: Compiler
+tags: [Compiler, lex, token]
 image:
   feature: background/Computer/4.jpg
   credit: unsplash
