--- a/_posts/compiler/2017-06-14-Yacc_1.md
+++ b/_posts/compiler/2017-06-14-Yacc_1.md
@@ -3,7 +3,8 @@ layout: post
 title: Yacc_1
 description:
 modified: 2017-06-13
-tags: [Compiler]
+category: Compiler
+tags: [Compiler, Yacc]
 image:
   feature: background/Computer/7.jpg
   credit: unsplash
