--- a/_posts/cpp/2017-02-05-Call-by.md
+++ b/_posts/cpp/2017-02-05-Call-by.md
@@ -3,7 +3,8 @@ layout: post
 title: "Call-by 정리"
 description: "Call-by value & reference 에 대해 정리"
 modified: 2017-02-05
-tags: [C++]
+category: C++
+tags: [C++, callby]
 comments: true
 image:
   feature: background/Computer/3.jpg
