--- a/_posts/cpp/2017-02-13-alloc.md
+++ b/_posts/cpp/2017-02-13-alloc.md
@@ -3,7 +3,8 @@ layout: post
 title: 동적 할당
 description: 메모리 동적 할당
 modified: 2017-02-13
-tags: [C, C++]
+category: C++
+tags: [C, C++, allocation]
 image:
   feature: background/Computer/5.jpg
   credit: unsplash 
