--- a/_posts/cpp/2017-02-17-const.md
+++ b/_posts/cpp/2017-02-17-const.md
@@ -3,7 +3,8 @@ layout: post
 title: Const 함수
 description: "Const 함수에 대해"
 modified: 2017-02-17
-tags: [C++]
+category: C++
+tags: [C++, const]
 image:
   feature: background/Computer/2.jpg
   credit: unsplash
