--- a/_posts/Diary/2018-01-06-180106_diary.md
+++ b/_posts/Diary/2018-01-06-180106_diary.md
@@ -4,6 +4,7 @@ title: contribution 확장프로그램 커스터마이징
 description: ""
 published: true
 modified: 2018-01-06
+category: Diary
 tags: [Diary]
 image:
   feature: background/Computer/8.jpg
