--- a/_posts/OpenGL/2017-04-08-VBO.md
+++ b/_posts/OpenGL/2017-04-08-VBO.md
@@ -3,7 +3,8 @@ layout: post
 title: VBO
 description:
 modified: 2017-06-26
-tags: [OpenGL]
+category: OpenGL
+tags: [OpenGL, VBO]
 image:
   feature: background/Computer/3.jpg
   credit: unsplash
