--- a/_posts/compiler/2017-04-18-Lex2.md
+++ b/_posts/compiler/2017-04-18-Lex2.md
@@ -3,7 +3,8 @@ layout: post
 title: Lex2
 description:
 modified: 2017-04-11
-tags: [Compiler]
+category: Compiler
+tags: [Compiler, lex]
 image:
   feature: background/Computer/4.jpg
   credit: unsplash
