--- a/_posts/compiler/2017-04-19-CFG.md
+++ b/_posts/compiler/2017-04-19-CFG.md
@@ -3,7 +3,8 @@ layout: post
 title: Context Free Grammar
 description:
 modified: 2017-04-11
-tags: [Compiler]
+category: Compiler
+tags: [Compiler, Context Free Grammar]
 image:
   feature: background/Computer/4.jpg
   credit: unsplash
