--- a/_posts/compiler/2017-06-13-Topdown.md
+++ b/_posts/compiler/2017-06-13-Topdown.md
@@ -3,7 +3,8 @@ layout: post
 title: Top-Down Parsing 
 description:
 modified: 2017-06-13
-tags: [Compiler]
+category: Compiler
+tags: [Compiler, parsing] 
 image:
   feature: background/Computer/7.jpg
   credit: unsplash
